<resources>
    <string name="app_name">有笔教师版</string>
    <string name="search_hint"></string>
    <string name="version_format_str">V%s</string>
    <string name="text_ok">确定</string>
    <string name="load_more">加载中...</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载. . .</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="tousu_tishi">投诉是指家长对老师某处的批改有疑问，进行了打点投诉，需要老师及时联系家长，针对投诉点进行重新检查并操作，详情参照群文件；</string>
    <string name="zhongcai_tishi">仲裁是指家长直接拒绝该份作业的批改，进入仲裁流程，由仲裁组老师审核；老师可主动联系家长沟通，家长若无异议采纳即取消仲裁。</string>
    <string name="zhuiwen_tishi">追问是学生对老师讲解有疑问，老师需要在追问的语音后面直接添加回复（追问回复可以是文字或语音），追问不回答无法继续抢题</string>
    <string name="daicaina_tishi">待采纳是指家长对于老师上传的答案讲解没有主动采纳，72小时内若无投诉则系统会自动采纳，相应学点和奖励会增加到个人学点上</string>
    <string name="svip_text">SVIP</string>
    <string name="attention_text">关注</string>
    <string name="tec_course_title_text">微课辅导</string>
    <string name="tec_course_tag_text">新时代的省心辅导模式</string>
    <string name="add_course_title_text">添加课程</string>
    <string name="purchase_student_title_text">已购学生</string>
    <string name="upload_class_text">上传课时</string>
    <string name="edit_class_text">编辑课时</string>
    <string name="class_catalog_title_text">课时目录</string>
    <string name="save_text">"  保 存   "</string>
    <string name="submit_text">"  提 交   "</string>
    <string name="knowledge_query">知识点</string>
    <string name="add_handout_view_text">在关键步骤旁的空白位置，点击，添加讲解</string>
    <string name="add_handout_view_text1">温馨提示：</string>
    <string name="add_handout_view_text2">请在讲义旁边随意点击，可添加语音或文字</string>
    <string name="done_this_page_text">完成本页</string>
    <string name="upload_course_hint_text1">请输入课时名称</string>
    <string name="upload_course_hint_text2">请描述此课时主要知识点</string>
    <string name="upload_course_text">请上传该课时的讲义照片</string>
    <string name="click_to_record_text">点击开始录音</string>
    <string name="recording_text">正在录音.........</string>
    <string name="click_to_stop_text">点击停止录音</string>
    <string name="saving_record_text">保存录音中...</string>
    <string name="upload_course_tips_text1">温馨提示：</string>
    <string name="upload_course_tips_text2">您上传的第1个和第2个课时将做为试听课，</string>
    <string name="upload_course_tips_text3">供学生免费试听。</string>
    <string name="delete_this_class_text">删除本课时</string>
    <string name="delete_course_page_confirm_text">确定删除这张讲义？</string>
    <string name="delete_chapter_confirm_text">确定删除整个课时？</string>
    <string name="homework_check_common_credit_text">信用：%s</string>
    <string name="homework_check_title_text">课业辅导</string>
    <string name="homework_checks_title_text">作业检查</string>
    <string name="homework_detail_title_text">作业详情</string>
    <string name="single_homework_title_text">单题检查</string>
    <string name="homework_check_ask_time_text">2分钟前</string>
    <string name="submit_homework_check_text">提交作业检查</string>
    <string name="goto_this_homework_check_text">进入作业检查</string>
    <string name="time_limit_homework_check_text1">作业检查限时</string>
    <string name="time_limit_homework_check_text2">分钟，还剩</string>
    <string name="time_limit_homework_check_text3">分钟</string>
    <string name="homewrok_hall_title_text">作业大厅</string>
    <string name="my_homework_title_text">我的作业检查</string>
    <string name="my_checkhomework_title_text">我检查的作业</string>
    <string name="fabu_homewrok_btn_text">发布作业</string>
    <string name="answer_quality_text">详细程度%s星</string>
    <string name="answer_time_text">%s分钟解决</string>
    <string name="desc_homework_text">请老师详细给出解题过程哦~~</string>
    <string name="change_homework_text">抢题后放弃,将被扣除1个信用</string>
    <string name="detail_homework_desc_text">请在单题位置点击，评估答案是否正确</string>
    <string name="detail_homework_desc2_text">请评估此题答案</string>
    <string name="ask_num_text">作业检查次数：%s</string>
    <string name="answer_num_text">检查作业次数：%s</string>
    <string name="help_info_text1">1：答案正确，可以描述本题知识点或者表扬鼓励学生。答案错误，请拍照上传纸面解题过程</string>
    <string name="help_info_text2">2：此页面专属本题，你可以随意位置打点讲解本题</string>
    <string name="help_info_text3">3：长按某个注释，即可删除</string>
    <string name="help_info_text_wrong1">1：你可以在关键步骤点击讲解本题</string>
    <string name="help_info_text_wrong2">2：长按某个注释，即可删除</string>
    <string name="check_point_view_text1">请在关键步骤点击</string>
    <string name="check_point_view_text2">添加语音/文字讲解</string>
    <string name="collect_homework_text">收藏</string>
    <string name="collect_homework_text_quxiao">取消收藏</string>
    <string name="please_evaluate_tec_lessons">请评价老师此次的讲解</string>
    <string name="please_add_comment">填写评论</string>
    <string name="go_back_text">返回</string>
    <string name="apply_arbitration_text">申请仲裁</string>
    <string name="giveup_arbitration_text">放弃仲裁</string>
    <string name="knowledge_of_text">知识点归属</string>
    <string name="wrong_type_text">错题类型</string>
    <string name="s_wrong_type_text">S型错题</string>
    <string name="k_wrong_type_text">K型错题</string>
    <string name="look_homework_text">查看作业</string>
    <string name="choice_knowledge_text">选择知识点归属</string>
    <string name="choice_knowledge_edittext_hint_text">请输入该错题所属知识点</string>
    <string name="grade_choice_text">年级选择：</string>
    <string name="subject_choice_text">科目选择：</string>
    <string name="chapter_choice_text">章节选择：</string>
    <string name="kpoint_choice_text">知识点选择：</string>
    <string name="search_timu_btn_text">查找考题</string>
    <string name="all_text">全部</string>
    <string name="search_timu_text_hint">请输入题目ID/考点关键字搜索</string>
    <string name="search_timu_text">按考题ID/考点关键字搜索：</string>
    <string name="search_timu_text2">按考点条件搜索：</string>
    <string name="grade_text1">初一</string>
    <string name="grade_text2">初二</string>
    <string name="grade_text3">初三</string>
    <string name="grade_text4">高一</string>
    <string name="grade_text5">高二</string>
    <string name="grade_text6">高三</string>
    <string name="fiter_title_text">历年考题集</string>
    <string name="report_homework_reason_text1">图片看不清或不完整</string>
    <string name="report_homework_reason_text2">图片与作业无关</string>
    <string name="report_homework_reason_text3">年级、科目有误或科目混合</string>
    <string name="report_homework_reason_text4">空白题超过2题</string>
    <string name="report_homework_reason_text5">超纲发题</string>
    <string name="text_ask_des">选填文字描述，最多填写24个字</string>
    <string name="text_qa_hall">问答广场</string>
    <string name="text_qa_hall_tag1">火热问答，累计答疑</string>
    <string name="text_qa_hall_tag3">道</string>
    <string name="text_pay_answer">悬赏问答</string>
    <string name="text_ask_title">难题答疑</string>
    <string name="text_responder_title">抢答</string>
    <string name="text_question_submit">发布问题</string>
    <string name="text_question_submiting">正在发布问题,请稍候</string>
    <string name="text_pay_answer_price">悬赏价格</string>
    <string name="text_pay_answer_price_tips">*1个学点等于1块钱，价格太低可能导致答题较慢！</string>
    <string name="text_pay_answer_alert">一次问一题，拍整张试卷的将被直接删除！</string>
    <string name="text_pay_answer_alert_tips">*温馨提示：一次问一题，拍整张试卷的将被直接删除！</string>
    <string name="text_pay_answer_alert_tips_subject">*温馨提示：选错科目可能会被举报，被举报会被直接删除</string>
    <string name="text_grade_subject_choice">选择擅长科目(可多选)</string>
    <string name="subject_choice_text2">选择科目</string>
    <string name="text_campus_scenery">校园风光</string>
    <string name="text_campus_scenery_tip">征集校园风采照</string>
    <string name="text_my_qpad">我的问答</string>
    <string name="text_my_qpad_stu">我的提问</string>
    <string name="text_my_qpad_tea">我的回答</string>
    <string name="text_excellent_selction">备课工具</string>
    <string name="text_gold_selction">我的学点</string>
    <string name="text_current_gold">当前余额</string>
    <string name="text_pay_asnwer_reward">酬金: </string>
    <string name="text_login">登录</string>
    <string name="text_login_by_qq">QQ直接登录</string>
    <string name="text_login_by_qq_1">QQ登录</string>
    <string name="text_login_by_phone">手机登录</string>
    <string name="text_login_regist_by_phone">手机号/学号登录</string>
    <string name="text_login_tips_title">*温馨提示：</string>
    <string name="text_login_tips_content1">大学生请登录</string>
    <string name="text_login_tips_content2">welearn.com</string>
    <string name="text_login_tips_content3">进行认证后，方可登录使用。</string>
    <string name="text_pay_gold">充值</string>
    <string name="text_friend_gold">邀请好友</string>
    <string name="text_dayday_signin">天天签到</string>
    <string name="text_report">请选择举报类型</string>
    <string name="text_report_desc">如果举报正确，奖励一个信用，反之扣除一个信用</string>
    <string name="text_report_success">举报成功</string>
    <string name="text_report_title">举报</string>
    <string name="text_unlogin">用户未登录！</string>
    <string name="text_report_reason1">图片与提问无关</string>
    <string name="text_report_reason2">图片看不清或不完整</string>
    <string name="text_report_reason3">一次提问超过一题</string>
    <string name="text_report_reason4">年级与科目设置有误</string>
    <string name="text_report_reason5">作文不在难题范围内</string>
    <string name="text_report_reason6">超纲发题</string>
    <string name="text_excellent_selction_tip_student">名校大学生讲解，思路胜过任何教辅</string>
    <string name="text_excellent_selction_tip_teacher">丰富课堂，拓展学生练习的优质题库</string>
    <string name="text_pay_answer_tip_teacher">有解答，就有收获，知识变成价值</string>
    <string name="text_dayday_signin_tip">连续签到可领更多学点</string>
    <string name="text_pay_answer_tip_student">15分钟解决难题，追问不限次</string>
    <string name="text_gold_not_less">签到分享领学点，当前可用学点</string>
    <string name="text_my_qpad_tip_student">我的学习记录和同学们关心的问题</string>
    <string name="text_my_qpad_tip_teacher">向学生和家长证明你的辅导能力</string>
    <string name="text_pay_answer_grab_tip">抢题后放弃，将扣除1个信用</string>
    <string name="text_question_description">请给出详细的解答过程哦~</string>
    <string name="text_grab_title">抢题</string>
    <string name="text_grab_answer_submit_area">答案提交区</string>
    <string name="text_grab_item_submit">提交答案</string>
    <string name="text_camera_popupwindow_photo">拍照</string>
    <string name="text_camera_popupwindow_alnum">从相册中获取</string>
    <string name="text_resend_popupwindow_resend">重发</string>
    <string name="text_camera_popupwindow_cancel">取消</string>
    <string name="text_album">相册</string>
    <string name="text_take_photo">拍照</string>
    <string name="text_nav_submit">确定</string>
    <string name="text_nav_cancel">取消</string>
    <string name="text_photo_view_tip">在每个关键步骤空白位置, 长按,添加语音/文字讲解</string>
    <string name="text_toast_have_not_enough">sdcard没有多余的空间，请清除部分文件后再试</string>
    <string name="text_toast_sdcard_not_available">没有找到SD卡，请重试</string>
    <string name="text_toast_grade_subject_choice">请选择擅长的科目</string>
    <string name="text_toast_grade_question_robbed">该题目已被抢走，请换题</string>
    <string name="text_toast_svr_error">服务器错误</string>
    <string name="text_toast_not_answer">请先长按图片输入文字或语音答案</string>
    <string name="text_toast_send_answer_error">发送答案失败，请重试</string>
    <string name="text_toast_send_answer_ing">正在提交，请稍候</string>
    <string name="text_commit">提交</string>
    <string name="sextype_man">男</string>
    <string name="sextype_women">女</string>
    <string name="about1">"		有笔教师版致力于通过科技手段让知识进行无障碍流通，让学生得到个性化的辅导学习，在学生获取答案的同时，给方法、给思路，让学生真正的学会学习。"</string>
    <string name="about2">"		每一位进驻有笔教师版的老师都经过培训认证，并进行严格的考核管理，以便能提供更优秀的个性化辅导。"</string>
    <string name="contact_us">联系我们</string>
    <string name="products_investment">咨询电话：</string>
    <string name="priducts_mail_address">400-0880-210</string>
    <string name="qq_group_title">咨询QQ：</string>
    <string name="qq_group">11155145</string>
    <string name="two_dimensional_code_download">QQ扫描分享赢学点</string>
    <string name="version">版本</string>
    <string name="all_rights_reserved">版权所有</string>
    <string name="group_name">深圳威兹讯科技有限公司</string>
    <string name="select_sex_title">选择性别</string>
</resources>