<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <include android:layout_width="match_parent"
        android:layout_height="wrap_content" layout="@layout/welearn_header_view" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="98dp"
                android:layout_height="98dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="35dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="7dp"
                android:text="@string/app_name"
                android:textColor="#585757"
                android:textSize="19sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/version"
                    android:textColor="#bcbcbc"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/version_name_about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:textColor="#bcbcbc"
                    android:textSize="15sp" />
            </LinearLayout>

            <TextView
                android:layout_width="232dp"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="#cfcfcf" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:lineSpacingExtra="5dp"
                android:text="@string/about1"
                android:textColor="#9e9e9e"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:lineSpacingExtra="5dp"
                android:text="@string/about2"
                android:textColor="#9e9e9e"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_us"
                        android:textColor="#9e9e9e"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/products_investment"
                            android:textColor="#9e9e9e"
                            android:textSize="12sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:autoLink="email"
                            android:text="@string/priducts_mail_address"
                            android:textColor="#9e9e9e"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/qq_group_title"
                            android:textColor="#9e9e9e"
                            android:textSize="12sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:autoLink="none"
                            android:text="@string/qq_group"
                            android:textColor="#9e9e9e"
                            android:textSize="12sp" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="111dp"
                    android:layout_height="1dp"
                    android:layout_weight="111" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="14dp"
                    android:orientation="vertical"
                    android:visibility="gone" >

                    <TextView
                        android:id="@+id/tips"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:text="@string/two_dimensional_code_download"
                        android:visibility="gone"
                        android:textColor="#9e9e9e"
                        android:textSize="12sp" />

                    <ImageView
                        android:id="@+id/qr_imageview"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_below="@+id/tips"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_erweima" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                android:gravity="center_horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all_rights_reserved"
                    android:textColor="#9e9e9e"
                    android:visibility="gone"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/group_name"
                    android:textColor="#9e9e9e"
                    android:visibility="gone"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>