<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_adopt_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#20000000" >

    <LinearLayout
        android:id="@+id/dialog_layout"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:background="@drawable/choic_sex_dialog_bg"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/select_sex_title"
            android:textColor="#000000"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/sex_group_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" >

            <RadioButton
                android:id="@+id/sex_man_rb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableRight="@android:drawable/btn_radio"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/sextype_man" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.01dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@color/welearn_gray" />

            <RadioButton
                android:id="@+id/sex_women_rb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableRight="@android:drawable/btn_radio"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/sextype_women" />
        </RadioGroup>

        <Button
            android:id="@+id/submit_adopt_btn"
            android:layout_width="@dimen/adopt_submit_width"
            android:layout_height="@dimen/adopt_submit_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_pop_dialog_btn_selector"
            android:gravity="center"
            android:text="@string/text_commit"
            android:textColor="@color/color_pop_dialog_btn_text_color_selector"
            android:textSize="14sp" />
    </LinearLayout>

</FrameLayout>