<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/filter_root_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_transparent" >

    <FrameLayout
        android:id="@+id/top_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dip"
            android:background="@android:color/white"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18sp"
                android:layout_marginTop="15dip"
                android:text="@string/text_report"
                android:textColor="#00bdbd"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dip"
                android:layout_marginRight="18dip"
                android:layout_marginTop="10dip"
                android:text="@string/text_report_desc"
                android:textColor="#969696"
                android:textSize="14sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginLeft="9dip"
                android:layout_marginRight="9dip"
                android:layout_marginTop="20dip"
                android:background="#c5c5c5" />

            <TextView
                android:id="@+id/report_reason_btn1"
                android:layout_width="match_parent"
                android:layout_height="30dip"
                android:layout_marginBottom="12dip"
                android:layout_marginLeft="18sp"
                android:layout_marginTop="12dip"
                android:gravity="center_vertical"
                android:text="@string/text_report_reason1"
                android:textSize="15sp"
                android:visibility="gone"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginLeft="9dip"
                android:layout_marginRight="9dip"
                android:background="#c5c5c5"
                android:visibility="gone"
                />

            <TextView
                android:id="@+id/report_reason_btn2"
                android:layout_width="match_parent"
                android:layout_height="30dip"
                android:layout_marginBottom="12dip"
                android:layout_marginLeft="18sp"
                android:layout_marginTop="12dip"
                android:gravity="center_vertical"
                android:text="@string/text_report_reason2"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginLeft="9dip"
                android:layout_marginRight="9dip"
                android:background="#c5c5c5" />

            <TextView
                android:id="@+id/report_reason_btn3"
                android:layout_width="match_parent"
                android:layout_height="30dip"
                android:layout_marginBottom="12dip"
                android:layout_marginLeft="18sp"
                android:layout_marginTop="12dip"
                android:gravity="center_vertical"
                android:text="@string/text_report_reason3"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginLeft="9dip"
                android:layout_marginRight="9dip"
                android:background="#c5c5c5" />

            <TextView
                android:id="@+id/report_reason_btn4"
                android:layout_width="match_parent"
                android:layout_height="30dip"
                android:layout_marginBottom="12dip"
                android:layout_marginLeft="18sp"
                android:layout_marginTop="12dip"
                android:gravity="center_vertical"
                android:text="@string/text_report_reason4"
                android:textSize="15sp"
                android:visibility="gone"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginLeft="9dip"
                android:layout_marginRight="9dip"
                android:background="#c5c5c5"
                android:visibility="gone"
                />

            <TextView
                android:id="@+id/report_reason_btn5"
                android:layout_width="match_parent"
                android:layout_height="30dip"
                android:layout_marginBottom="12dip"
                android:layout_marginLeft="18sp"
                android:layout_marginTop="12dip"
                android:gravity="center_vertical"
                android:text="@string/text_report_reason5"
                android:textSize="15sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginLeft="9dip"
                android:layout_marginRight="9dip"
                android:background="#c5c5c5"
                android:visibility="gone"
                />

            <TextView
                android:id="@+id/report_reason_btn6"
                android:layout_width="match_parent"
                android:layout_height="30dip"
                android:layout_marginBottom="12dip"
                android:layout_marginLeft="18sp"
                android:layout_marginTop="12dip"
                android:gravity="center_vertical"
                android:text="@string/text_report_reason6"
                android:textSize="15sp"
                android:visibility="gone"
                />

        </LinearLayout>

        <ImageView
            android:id="@+id/ic_close_dialog_grab"
            android:layout_width="22dip"
            android:layout_height="22dip"
            android:layout_gravity="top|right"
            android:contentDescription="@null"
            android:src="@drawable/ic_camera_choice_del_selector" />
    </FrameLayout>

</RelativeLayout>